--- a/css/search.less
+++ b/css/search.less
@@ -353,7 +353,7 @@ body {
 
 
 
-#result {
+.result {
 	width: 100%;
 	min-width: 100%;
 	//max-width: 450px;
@@ -364,7 +364,7 @@ body {
 	font-family: "Rubik", sans-serif;
 	box-shadow: 0px 0px 30px 0px #e6e6e6;
 	color: #303436;
-	font-size: 1.5rem;
+	font-size: 1.45rem;
 	position: relative;
 	padding: 30px 0;
 	
